# oron-cleaner

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  clean_pipeline.py  pyproject.toml  requirements.txt
pipeline/: audio_filter.py  checkpoint.py  clip_result.py  constants.py  processor.py  stats.py  upload.py
pipeline/cards/: common_voice.md  fleurs.md  worldspeech.md
pipeline/datasets/: common_voice.py  fleurs.py  worldspeech.py
tests/: test_audio_filter.py
